Fix the image stretch

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ html {
   color: #495562;
 }
 
-img {
+.image {
   max-height: 500px;
   overflow: hidden;
 }
